poprawa linków 2 pliki

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: joga11
-title: my docs
+title: My Docs
 description: An example of technical documentation hosted on Github pages, using the Just the Docs Jekyll theme
 remote_theme: joga11/just-the-docs
 
